--- a/build.gradle
+++ b/build.gradle
@@ -2,15 +2,19 @@
 
 buildscript {
     repositories {
+        jcenter()
+        google()
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.1.0'
+        classpath "com.android.tools.build:gradle:3.3.1"
     }
 }
 
 allprojects {
     repositories {
+        jcenter()
+        google()
         mavenCentral()
     }
 }
